service_A/deploy/bitcoin-server-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitcoin-server
  labels:
    name: bitcoin-server
