service_A/deploy/bitcoin-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoin-server-ingress-nginx
  namespace: bitcoin-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bitcoin-server.com 
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: bitcoin-server-service
            port:
              number: 80
